--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -8,7 +8,7 @@
                 <a class="btn btn-warning" href="{{ path('teg_edit', { 'id': entity.id }) }}">
                 Edit
                 </a>
-                {{ form(delete_form) }} 
+                {{ form(publish_form) }} 
             </div>
         {% endif %}
         <h4>{{ entity.titulo }}</h4>
