--- a/src/Biblioteca/TegBundle/Resources/views/teg/edit.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/edit.html.twig
@@ -132,6 +132,6 @@
             Back to the list
         </a>
     </li>
-    <li>{{ form(delete_form) }}</li>
+    <li>{{ form(publish_form) }}</li>
 </ul>
 {% endblock %}
