Estilo de Formulario de Buscador v2.0
Se agrego el formulario al listado de TEG.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,8 @@
 		<title>{% block title %}Bienvenido!{% endblock %}</title>
 		{% block stylesheets %}
 			<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
+
+			<link href="{{ asset('css/searchformstyle.css') }}" type="text/css" rel="stylesheet" />
 			
 			<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 		   
