--- a/src/Biblioteca/TegBundle/Resources/views/teg/edit.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/edit.html.twig
@@ -122,8 +122,8 @@
                 
             </div>
         </div>
- 
-	{{ form_end(edit_form) }}
+ {{ form_end(edit_form, {'render_rest': false} ) }}
+	{# { form_end(edit_form) } #}
 
 
         <ul class="record_actions">
