searchForm creado desde tegController
Correcion de error al crear searchForm desde tegController;
estilo de searForm se agrega desde los Controladores;
Nuevo estilo de Home.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
 		{% block stylesheets %}
 			<link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
 
-			<link href="{{ asset('css/searchformstyle.css') }}" type="text/css" rel="stylesheet" />
+			<link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet" />
 			
 			<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 		   
