--- a/src/Biblioteca/TegBundle/Resources/views/Default/index.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/Default/index.html.twig
@@ -1,47 +1,37 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-{{ form_start(form,{'attr': {'class': 'searchform'}, 'action': path('teg_search')}) }}
-    {{ form_errors(form) }}
-    <div class="row">
-        <div class="col-md-6 col-xs-12">
-            {{ form_widget(form.q) }}
-            {{ form_widget(form.submit) }}
+<div id="home">
+    {{ form_start(form) }}
+        {{ form_errors(form) }}
+        <div class="row">
+            <div class="col-xs-12">
+                {{ form_widget(form.q) }}
+                {{ form_widget(form.submit) }}
+            </div>
+            <br></br>
+            <div class="col-xs-12">
+                {{ form_label(form.desde)}}
+                {{ form_widget(form.desde) }}
+                {{ form_label(form.hasta)}}
+                {{ form_widget(form.hasta) }}
+                {{ form_label(form.escuela)}}
+                {{ form_widget(form.escuela) }}
+            </div>
+            {{ form_widget(form._token) }}
         </div>
-        <div class="col-md-6 col-xs-12">
-            {{ form_label(form.desde)}}
-            {{ form_widget(form.desde) }}
-            {{ form_label(form.hasta)}}
-            {{ form_widget(form.hasta) }}
-            {{ form_label(form.escuela)}}
-            {{ form_widget(form.escuela) }}
-        </div>
-        {{ form_widget(form._token) }}
-    </div>
+    {{ form_end(form, {'render_rest': false}) }}
 
-{{ form_end(form, {'render_rest': false}) }}
-<style type="text/css">
-
-</style>
-<table class="records_list">
-        <div class="row" style="width:600px; margin: 0 auto 25px;">
-        <h3>Recientes:</h3>
+    <div class="row col-xs-12 col-md-7" style="float:initial; margin: 0 auto 25px;">
+        <h4>Recientes:</h4>
         {% for entity in entities %}
             <article class="col-md-4 reciente">
-                
                 <p>{{ entity.titulo }}</p>
                 ({{ entity.publicacion|date('d-m-Y') }})
                 {{ entity.escuela }}<br>
                 <a href="{{ path('teg_show', { 'id': entity.id }) }}">leer más</a>
             </article>
         {% endfor %}
-        </div>
-    </table>
-
-<img src="{# { asset('img/logo.jpg') } #}">
-
-
-
-
-
+    </div>
+</div>
 {% endblock %}
