--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -1,23 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    
-    <div class="form-horizontal col-md-3 col-xs-12">
-        <th>Capitulos</th>
-<ul id="cap-fields-list" >
-            {% for iField in entity.capitulos %}
-                <li>
-                    {{ iField }}
-                    <a href="{{ asset('uploads/capitulos/' ~ iField) }}">View capitulo (PDF)</a>
-             
- <!--<iframe id="viewer" src="{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/' ~ iField) }}"
- width='100%' height='400px'
-></iframe>-->   </li>
-            {% endfor %}
-        </ul>    
-    </div>
-    <div class="form-horizontal col-md-9 col-xs-12">
-        <div>
+    <div>
             <a href="{{ path('teg') }}">
             Back to the list</a>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
@@ -27,40 +11,57 @@
                 {{ form(publish_form) }} 
             {% endif %}
         </div>
-        <h4>{{ entity.titulo }}</h4>
-        <div class="form-group">
-            <label class="col-xs-6 col-md-2 control-label">Publicación</label> 
-            <div class="col-xs-9">
-                <p class="form-control-static">{{ entity.publicacion|date('d-m-Y') }}</p>
+    <div class="col-md-2 col-xs-12">
+    <ul class="nav nav-pills">
+        <li class="active"><a data-toggle="tab" href="#detalles">Detalles</a></li>
+        {% for iField in entity.capitulos %}
+                <li><a data-toggle="tab" href="#capitulo">{{ iField }}</a></li>
+        {% endfor %}
+    </ul>
+
+    </div>
+    <div class="tab-content">
+        <div id="detalles" class="tab-pane fade in active form-horizontal col-md-9 col-xs-12">
+            <h4>{{ entity.titulo }}</h4>
+            <div class="form-group">
+                <label class="col-xs-6 col-md-2 control-label">Publicación</label> 
+                <div class="col-xs-9">
+                    <p class="form-control-static">{{ entity.publicacion|date('d-m-Y') }}</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-6 col-md-2 control-label">Resumen</label> 
+                <div class="col-xs-9">
+                    <p class="form-control-static" style="font-size: 15px;font-size: 1.5rem;-webkit-column-count:3;/* Chrome, Safari, Opera */-moz-column-count: 3;/* Firefox */column-count: 3;">{{ entity.resumen}}</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-6 col-md-2 control-label">Palabras Clave</label> 
+                <div class="col-xs-9">
+                    <p class="form-control-static">{% for iField in entity.palabrasclave %} {{ iField }}, {% endfor %}</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-6 col-md-2 control-label">Autor(es)</label> 
+                <div class="col-xs-9 col-md-4">
+                    <p class="form-control-static">{% for iField in entity.autores %} {{ iField }}, {% endfor %}</p>
+                </div>
+                <label class="col-xs-6 col-md-2 control-label">Tutor(es)</label> 
+                <div class="col-xs-9 col-md-4">
+                    <p class="form-control-static">{% for iField in entity.tutores %} {{ iField }}, {% endfor %}</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-xs-6 col-md-2 control-label">cota</label> 
+                <div class="col-xs-9">
+                    <p class="form-control-static">{{ entity.cota}}</p>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <label class="col-xs-6 col-md-2 control-label">Resumen</label> 
-            <div class="col-xs-9">
-                <p class="form-control-static" style="font-size: 15px;font-size: 1.5rem;-webkit-column-count:3;/* Chrome, Safari, Opera */-moz-column-count: 3;/* Firefox */column-count: 3;">{{ entity.resumen}}</p>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-xs-6 col-md-2 control-label">Palabras Clave</label> 
-            <div class="col-xs-9">
-                <p class="form-control-static">{% for iField in entity.palabrasclave %} {{ iField }}, {% endfor %}</p>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-xs-6 col-md-2 control-label">Autor(es)</label> 
-            <div class="col-xs-9 col-md-4">
-                <p class="form-control-static">{% for iField in entity.autores %} {{ iField }}, {% endfor %}</p>
-            </div>
-            <label class="col-xs-6 col-md-2 control-label">Tutor(es)</label> 
-            <div class="col-xs-9 col-md-4">
-                <p class="form-control-static">{% for iField in entity.tutores %} {{ iField }}, {% endfor %}</p>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-xs-6 col-md-2 control-label">cota</label> 
-            <div class="col-xs-9">
-                <p class="form-control-static">{{ entity.cota}}</p>
-            </div>
+        <div id="capitulo" class="tab-pane fade form-horizontal col-md-9 col-xs-12">
+            <iframe id="viewer" src="{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}#{{ asset('uploads/capitulos/capitulo1.pdf') }}"
+             width='100%' height='500px'
+            ></iframe>
         </div>
     </div>
     
